# travel-planner-deepagents-workshop

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
agents/travel_planner/: AGENTS.md  agent.py  deepagents.toml
agents/travel_planner/skills/budget-summary/: SKILL.md
agents/travel_planner/skills/itinerary-format/: SKILL.md
agents/travel_planner/skills/packing-list/: SKILL.md
agents/travel_planner/skills/travel-brief/: SKILL.md
notebooks/: basic-agent.ipynb  deepagents-travel-planner.ipynb  mutli-agent.ipynb
utils/: models.py
